--- a/GestorPeliculas.html
+++ b/GestorPeliculas.html
@@ -8,14 +8,22 @@
     <title>Gestor de Películas</title>
 </head>
 <body>
-    <nav>
-        <a href="#" class="nav-link">Inicio </a>
-        <a href="#" class="nav-link">Cartelera </a>
-        <a href="#" class="nav-link">Inicia Sesion </a>
-        <a href="#" class="nav-link">Registro </a>
-    </nav>
+    <!--Head pag-->
+    <header>
+        <div class="title">
+            <h2 class="logo">Peliculas en Cartelera</h2>
+            <nav>
+                <a href="index.html" class="nav-link">Inicio </a>
+                <a href="#" class="nav-link">Cartelera </a>
+                <a href="#login" class="nav-link">Inicia Sesion </a>
+                <a href="#" class="nav-link">Registro </a>
+                <a href="gestorPeliculas.html" class="nav-link">Gestion</a>
+            </nav>
+        </div>
+    </header>
+    
     <div class="title">
-        <h2>Cartelera</h2>
+        <h2 class="logo">Cartelera</h2>
         <a href="#addmovie"><button type="button" class="title__btn-new">Nuevo</button></a>
     </div>
     <div class="movies">
@@ -74,11 +82,12 @@
 
     <div class="modal-addmovie" id="addmovie">
         <div class="modal-addmovie__title">
-            <h3>Gestor de peliculas</h3>
             <a href="" class="close">X</a>
+            <h3</h3>
+            
         </div>
         <div class="modal-addmovie__data">
-            <form action="" method="get" class="modal-addmovie__data-form"></form>
+            <form action="" method="get" class="modal-addmovie__data-form">
                 <div>
                     <label for="name">Nombre</label>
                     <input type="text" id="name">
@@ -144,6 +153,23 @@
             <a href="#imgmovie2">></a>-->
         </div>
     </div>
+
+      <!--Modal para login-->
+      <div class="modal-login" id="login">
+		<form action="" method="get" class="form-modal-login">
+            <a href="" class="close">X</a>
+			<label for="email" class="form-modal-login__label-email">E-mail</label>
+			<input type="email" name="email" class="form-modal-login__email" requiered>
+			<label for="pass" class="form-modal-login__label-pass">Contraseña</label>
+			<input type="password" name="pass" class="form-modal-login__pass" requiered>
+            <input type="checkbox" name="remember" class="form-modal-login__remember" value="yes">Recuerda mi nombre de Usuario
+			<div>
+				<a href="http://">Olvidé mi contraseña</a><br>
+				<a href="http://">Registrarse</a>
+			</div>
+			<input type="submit" value="Ingresar" class="form-modal-login__submit">
+		</form>
+	</div>
 
 
 </body>
