--- a/Registro.html
+++ b/Registro.html
@@ -8,6 +8,7 @@
 	<title>Formulario de Registro</title>
 	<link rel="icon" href="https://cdn.glitch.com/65c1b8f1-cb52-4f14-9c54-49d1921a65e4%2Ffilm.png?v=1631331965612" type="images/film">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	
 </head>
 <body>
 	<header>
@@ -16,7 +17,7 @@
 			<h2 class="logotipo">SIRCi</h2>
 			<nav>
 				<a href="https://sirci.glitch.me/" class="activo"><i class="fas fa-film"></i> Inicio</a>				
-				<a href="#"><i class="fas fa-photo-video"></i> Cartelera</a>
+				<a href="https://steep-sunset-seaplane.glitch.me"><i class="fas fa-photo-video"></i> Cartelera</a>
 			</nav>
 		</div>
 		<!--Fin Menu de Navegacion-->
