--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard SIRCi</title>
     <link rel="icon" href="https://cdn.glitch.com/65c1b8f1-cb52-4f14-9c54-49d1921a65e4%2Ffilm.png?v=1631331965612" type="images/film">
     <link rel="stylesheet" href="css/style2.css">
+    <link rel="icon" href="https://cdn.glitch.com/65c1b8f1-cb52-4f14-9c54-49d1921a65e4%2Ffilm.png?v=1631331965612" type="images/film">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>    
@@ -19,7 +20,7 @@
             <a href="#" class="logout_btn"><i class="fas fa-sign-out-alt"></i> Cerrar Sesion</a>
         </div>
     </header>
-
+    
     <div class="sidebar">
         <center>
             <img src="https://cdn.glitch.com/65c1b8f1-cb52-4f14-9c54-49d1921a65e4%2Ffilm.jpg?v=1631331236636" class="profile_image">            
